[package]
name = "pingis_pong"
version = "0.1.0"
authors = ["JesperAxelsson <jesper@woocode.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
# bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_rapier2d = "0.9"
rapier2d = "0.7"
nalgebra = "*"
fastrand = "1.4.0"
# rapier2d = { version = "0.8", default-features = false, features = [ "dim2", "f32" ] }